package pattern_examples.mediator_pattern_example;

//mediator
public interface Chat {
    void sendMessage(String message, User user);
}
