package pattern_examples.mediator_pattern_example;

public interface User {
    void sendMessage(String message);

    void getMessage(String message);
}
