@startuml

title __MEDIATOR_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.mediator_pattern_example {
    class pattern_examples.mediator_pattern_example.Admin {
        + Admin()
        + getMessage()
        + sendMessage()
    }
  }
  

  namespace pattern_examples.mediator_pattern_example {
    interface pattern_examples.mediator_pattern_example.Chat {
        {abstract} + sendMessage()
    }
  }
  

  namespace pattern_examples.mediator_pattern_example {
    class pattern_examples.mediator_pattern_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.mediator_pattern_example {
    class pattern_examples.mediator_pattern_example.SimpleUser {
        + SimpleUser()
        + getMessage()
        + sendMessage()
    }
  }
  

  namespace pattern_examples.mediator_pattern_example {
    class pattern_examples.mediator_pattern_example.TextChat {
        ~ users : List<User>
        + addUser()
        + sendMessage()
        + setAdmin()
    }
  }
  

  namespace pattern_examples.mediator_pattern_example {
    interface pattern_examples.mediator_pattern_example.User {
        {abstract} + getMessage()
        {abstract} + sendMessage()
    }
  }
  

  pattern_examples.mediator_pattern_example.Admin .up.|> pattern_examples.mediator_pattern_example.User
  pattern_examples.mediator_pattern_example.Admin o-- pattern_examples.mediator_pattern_example.Chat : chat
  pattern_examples.mediator_pattern_example.SimpleUser .up.|> pattern_examples.mediator_pattern_example.User
  pattern_examples.mediator_pattern_example.SimpleUser o-- pattern_examples.mediator_pattern_example.Chat : chat
  pattern_examples.mediator_pattern_example.TextChat .up.|> pattern_examples.mediator_pattern_example.Chat
  pattern_examples.mediator_pattern_example.TextChat o-- pattern_examples.mediator_pattern_example.User : admin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
